@startuml

title __FLIBOOK's Class Diagram__\n

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.BookData {
        {static} + CREATOR : Creator<BookData>
        + author : String
        + description : String
        + genres : String
        + id : int
        + name : String
        ~ downloadTypes : ArrayList<String>
        ~ hasCover : boolean
        ~ img : Bitmap
        + BookData()
        + describeContents()
        + toString()
        + writeToParcel()
        ~ BookData()
        ~ BookData()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.Bookmark {
        + page : int
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.CustomFileListAdapter {
        - context : Activity
        - names : String[]
        + CustomFileListAdapter()
        + getView()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.CustomListAdapter {
        - authors : String[]
        - context : Activity
        - genres : String[]
        - names : String[]
        + CustomListAdapter()
        + getView()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.DataFragment {
        + onCreate()
        + onCreateView()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.HighlightData {
        - bookId : String
        - content : String
        - date : Date
        - note : String
        - pageId : String
        - pageNumber : int
        - rangy : String
        - type : String
        - uuid : String
        + getBookId()
        + getContent()
        + getDate()
        + getNote()
        + getPageId()
        + getPageNumber()
        + getRangy()
        + getType()
        + getUUID()
        + toString()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.MainActivity {
        - mAppBarConfiguration : AppBarConfiguration
        + onCreateOptionsMenu()
        + onSupportNavigateUp()
        # onCreate()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.MyThread {
        ~ context : Activity
        ~ type : String
        + MyThread()
        + run()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.Network {
        {static} - bookList : String
        {static} - doc : Document
        {static} - proxyHost : String
        {static} - proxyPort : int
        {static} - siteURL : String
        + Network()
        {static} + downloadTask()
        {static} + getDataTask()
        {static} + getPageCountTask()
        {static} + searchTask()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.PdfActivity {
        ~ bookmarkFile : File
        + onPageChanged()
        + onStop()
        # onCreate()
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.Storage {
        {static} + delete()
        {static} + rename()
        {static} + scanBooksTask()
        {static} + unzip()
        {static} + update()
        {static} + write()
        {static} + zip()
    }
  }
  

  com.kanzu.flibook.BookData .up.|> android.os.Parcelable
  com.kanzu.flibook.CustomFileListAdapter -up-|> android.widget.ArrayAdapter
  com.kanzu.flibook.CustomListAdapter -up-|> android.widget.ArrayAdapter
  com.kanzu.flibook.DataFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.DataFragment o-- com.kanzu.flibook.BookData : book
  com.kanzu.flibook.DataFragment o-- com.kanzu.flibook.databinding.FragmentDataBinding : binding
  com.kanzu.flibook.HighlightData .up.|> com.folioreader.model.HighLight
  com.kanzu.flibook.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kanzu.flibook.MainActivity o-- com.kanzu.flibook.databinding.ActivityMain2Binding : binding
  com.kanzu.flibook.MyThread .up.|> java.lang.Runnable
  com.kanzu.flibook.MyThread o-- com.kanzu.flibook.BookData : book
  com.kanzu.flibook.PdfActivity .up.|> com.github.barteksc.pdfviewer.listener.OnPageChangeListener
  com.kanzu.flibook.PdfActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kanzu.flibook.PdfActivity o-- com.kanzu.flibook.Bookmark : bookmark


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
